[BUFFER] Cleanups
(cherry picked from commit 94aa5f84a6e1de56646954895ea9a73f59df982b)